Revert "Revert "MikuSettings: Add media notification background customisations[2/2]""
This reverts commit 9a8082d117beb9f8d1b3ce7f81ef9bcd20e29c8c.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,6 +22,11 @@
 
     <!-- Media notification -->
     <string name="artwork_media_title">🎼 Miku Media notification</string>
+    <string name="artwork_media_background_title">Artwork media background</string>
+    <string name="artwork_media_background_summary">Set media artwork as the notification media background</string>
+    <string name="artwork_media_background_enable_blur_title">Blur media media artwork background</string>
+    <string name="artwork_media_background_blur_radius_title">Blur amount for media artwork</string>
+    <string name="artwork_media_background_alpha_title">Transparency of media artwork</string>
 
     <!-- Statusbar net monitor -->
     <string name="traffic_title">🌐 Traffic Indicators</string>
