[Miku-ify] Translate Miku Media notification title for Chinese users

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -20,6 +20,9 @@
     <string name="miku_settings_summary">Secret 在梦中出现 的秘密</string>
     <string name="device_part_title">专属设置</string>
 
+    <!-- Media notification -->
+    <string name="artwork_media_title">🎼 Miku 音乐通知栏</string>
+
     <!-- Statusbar net monitor -->
     <string name="traffic_title">🌐 网速显示</string>
     <string name="network_traffic">🌐 网速显示</string>
